#23 Fix broken layout

--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 85vw;
+  width: 90vw;
   max-width: 535px;
   margin-top: 4.6rem;
   text-align: center;
